style.css
/* CSS Reset */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* Variables */
:root {
    --issue-8: #f6e0a4;
    --issue-7: #ff608c;
    --issue-6: #ffffff;
    --issue-5: #00c1b5;
    --issue-4: #ff651a;
    --issue-3: #ffbe00;
    --issue-2: #1d3fbb;
    --issue-1: #e30512;

    --font-size: 18px;
    --issue-width: 26.25rem;
}

/* Global Styles */
body {
    width: 100%;
    height: 100dvh;
    font-family: 'Roboto', sans-serif;
    font-size: var(--font-size);
    position: relative;
    overflow: hidden;
    transition: background-color 0.7s;
}

ul {
    list-style: none;
    padding: 0;
    margin: 0;
}

a {
    color: inherit;
    text-decoration: none;
}

p {
    margin: 0;
}

/* Utility Classes */
.text-underline {
    text-decoration: underline;
}

.text-light {
    font-weight: 300;
}

.fs-small {
    font-size: 0.67em;
}

.fs-bold {
    font-weight: bold;
}

.d-block {
    display: block;
}

.link {
    pointer-events: all !important;
    text-decoration: underline;
    color: inherit;

    &:hover {
        text-decoration: none;
    }
}

.link-reverse {
    pointer-events: all !important;
    text-decoration: none;
    color: inherit;

    &:hover {
        text-decoration: underline;
    }
}

.active {
    font-weight: bold;
}

.color-reverse {
    color: #e568ac !important;
}

/* HEADER */
.header {
    position: absolute;
    top: 0;
    left: 1rem;
    right: 1rem;
    margin-top: 1.25rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
    pointer-events: none;

    .logo {
        width: 16.25rem;
        height: 1.875rem;
    }
}

/* ===============| HAMBURGER MENU |================ */
.hamburger-menu {
    width: 35px;
    display: none;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 7px;

    &::before,
    > input,
    &::after {
        content: "";
        width: 100%;
        height: 3px;
        background: #000;
        transform-origin: center;
    }

    > input {
        appearance: none;
        margin: 0;
        transition: all 0.35s ease-out;

        &:checked {
            opacity: 0;
        }

        &:not(:checked) {
            opacity: 1;
        }
    }
}


.hamburger-menu:has(input:checked)::before {
    animation: down-rotate 0.4s ease-out both;
}

@keyframes down-rotate {
    0% {
        transform: translateY(0);
    }
    50% {
        transform: translateY(10px);
    }
    100% {
        transform: translateY(10px) rotate(45deg) scale(1);
    }
}

.hamburger-menu:has(input:checked)::after {
    animation: up-rotate 0.4s ease-out both;
}

@keyframes up-rotate {
    0% {
        transform: translateY(0);
    }
    50% {
        transform: translateY(-10px);
    }
    100% {
        transform: translateY(-10px) rotate(-45deg) scale(1);
    }
}

/* Hamburger menu UNCHECKED */
.hamburger-menu:has(input:not(:checked))::before {
    animation: rotate-up 0.4s ease-out both;
}

@keyframes rotate-up {
    0% {
        transform: translateY(10px) rotate(45deg) scale(1);
    }
    50% {
        transform: translateY(10px);
    }
    100% {
        transform: translateY(0);
    }
}

.hamburger-menu:has(input:not(:checked))::after {
    animation: rotate-down 0.4s ease-out both;
}

@keyframes rotate-down {
    0% {
        transform: translateY(-10px) rotate(-45deg) scale(1);
    }
    50% {
        transform: translateY(-10px);
    }
    100% {
        transform: translateY(0);
    }
}

/* ================================================= */

/* MAIN */
.container {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    text-align: center;
    height: 100dvh;
    width: 100%;
    overflow-y: scroll;
    scroll-snap-type: y mandatory;
    scroll-behavior: smooth;

    /* Hide the scroll bar */
    -ms-overflow-style: none; /* IE and Edge */
    scrollbar-width: none; /* Firefox */

    &::-webkit-scrollbar { /* Chrome */
        display: none;
    }

    .credit {
        display: none;
    }
}

.issue {
    max-width: var(--issue-width);
    scroll-snap-align: start;
    margin: 0 auto;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    > *:not(img) {
        margin-bottom: 1em;
    }

    a {
        color: white;
        font-weight: bold;
    }

    span {
        display: block;
    }

    p {
        font-size: 0.835em;
    }

    h2 {
        font-size: inherit;
    }

    .issue-image {
        width: 100%;
    }

    .buy {
        text-transform: uppercase;
    }
}

/* FOOTER */
.footer {
    position: absolute;
    bottom: 1.25rem;
    left: 1.25rem;
    right: 1.25rem;
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
    pointer-events: none;

    .footer-description {
        max-width: 20rem;
        min-width: 10rem;
        font-weight: bold;

        p {
            line-height: 1.385em;
        }

        .policy {
            display: block;
            margin-top: 1.5em;
        }
    }

    .footer-menu {
        line-height: 1.575em;
    }
}

/* =========================== | MEDIA QUERIES | =========================== */
@media (max-width: 1024px) {
    .header {
        z-index: 100;
    }

    .container > .credit {
        display: flex;

        p {
            font-weight: bold;
            font-size: 1.25rem;
            line-height: 1.75rem;
        }

        > .policy, .info {
            display: none;
        }
    }

    .footer-description > p {
        display: none;
    }
}

@media (max-width: 650px) {
    .header {
        .logo {
            max-width: 100%;
            height: auto;
        }

        a {
            display: none !important;
        }

        .hamburger-menu {
            display: flex;
        }
    }

    .container {
        padding: 0 1.25rem;

        .credit > .policy, .info {
            display: block !important;
        }
    }

    .footer {
        display: none;
    }
}

